--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
     </div>
 
     <!-- end main content -->
-    <!-- start code message -->
-    <!-- Messenger Chat Plugin Code -->
+
+    <!--Start Messenger Chat Plugin Code -->
     <div id="fb-root"></div>
 
     <!-- Your Chat Plugin code -->
@@ -76,7 +76,8 @@
       })(document, "script", "facebook-jssdk");
     </script>
 
-    <!-- end code message -->
+    <!-- End code message -->
+
     <!-- start bootstrap script -->
     <script src="assets/js/index.js"></script>
     <script
